kubernetes/components/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-code-server
spec:
  ports:
    - name: code-server
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: ${APP}
